// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builderz working for single package babel-basic 1`] = `1`;

exports[`builderz working for single package babel-basic 2`] = `
"var answer = 42;
console.log(\\"the answer is \\".concat(answer));
"
`;

exports[`builderz working for single package babel-exclusions 1`] = `1`;

exports[`builderz working for single package babel-exclusions 2`] = `
"const foo = () => 42;

console.log(\\"the answer is \\".concat(foo()));
"
`;

exports[`builderz working for single package babel-loose 1`] = `1`;

exports[`builderz working for single package babel-loose 2`] = `
"var Foo = /*#__PURE__*/function () {
  function Foo() {}

  var _proto = Foo.prototype;

  _proto.bar = function bar() {};

  return Foo;
}();

module.exports = Foo;
"
`;

exports[`builderz working for single package babel-per-file 1`] = `1`;

exports[`builderz working for single package babel-per-file 2`] = `
"
"
`;

exports[`builderz working for single package babel-reads-presets 1`] = `10`;

exports[`builderz working for single package babel-reads-presets 2`] = `
"var two = function two() {
  try {
    for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }

    return Promise.resolve(args.reduce(function (total, value) {
      return total + value;
    }, 0));
  } catch (e) {
    return Promise.reject(e);
  }
};

var index = (function () {
  for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
    args[_key] = arguments[_key];
  }

  try {
    return Promise.resolve(two.apply(void 0, args)).then(function (_two) {
      return Promise.resolve(two.apply(void 0, args)).then(function (_two2) {
        return [_two, _two2];
      });
    });
  } catch (e) {
    return Promise.reject(e);
  }
});

module.exports = index;
"
`;

exports[`builderz working for single package babel-reads-presets 3`] = `
"var two = function two() {
  try {
    for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }

    return Promise.resolve(args.reduce(function (total, value) {
      return total + value;
    }, 0));
  } catch (e) {
    return Promise.reject(e);
  }
};

var index = (function () {
  for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
    args[_key] = arguments[_key];
  }

  try {
    return Promise.resolve(two.apply(void 0, args)).then(function (_two) {
      return Promise.resolve(two.apply(void 0, args)).then(function (_two2) {
        return [_two, _two2];
      });
    });
  } catch (e) {
    return Promise.reject(e);
  }
});

export default index;
"
`;

exports[`builderz working for single package babel-reads-presets 4`] = `
"var r=function(){try{for(var r=arguments.length,e=new Array(r),n=0;n<r;n++)e[n]=arguments[n];return Promise.resolve(e.reduce(function(r,e){return r+e},0))}catch(r){return Promise.reject(r)}};module.exports=function(){for(var e=arguments.length,n=new Array(e),t=0;t<e;t++)n[t]=arguments[t];try{return Promise.resolve(r.apply(void 0,n)).then(function(e){return Promise.resolve(r.apply(void 0,n)).then(function(r){return[e,r]})})}catch(r){return Promise.reject(r)}};
//# sourceMappingURL=babelReadsPresets.min.cjs.js.map
"
`;

exports[`builderz working for single package babel-reads-presets 5`] = `
"var r=function(){try{for(var r=arguments.length,e=new Array(r),t=0;t<r;t++)e[t]=arguments[t];return Promise.resolve(e.reduce(function(r,e){return r+e},0))}catch(r){return Promise.reject(r)}};export default function(){for(var e=arguments.length,t=new Array(e),n=0;n<e;n++)t[n]=arguments[n];try{return Promise.resolve(r.apply(void 0,t)).then(function(e){return Promise.resolve(r.apply(void 0,t)).then(function(r){return[e,r]})})}catch(r){return Promise.reject(r)}}
//# sourceMappingURL=babelReadsPresets.min.esm.js.map
"
`;

exports[`builderz working for single package babel-reads-presets 6`] = `
"!function(e,r){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?module.exports=r():\\"function\\"==typeof define&&define.amd?define(r):(e=e||self).babelReadsPresets=r()}(this,function(){var e=function(){try{for(var e=arguments.length,r=new Array(e),n=0;n<e;n++)r[n]=arguments[n];return Promise.resolve(r.reduce(function(e,r){return e+r},0))}catch(e){return Promise.reject(e)}};return function(){for(var r=arguments.length,n=new Array(r),t=0;t<r;t++)n[t]=arguments[t];try{return Promise.resolve(e.apply(void 0,n)).then(function(r){return Promise.resolve(e.apply(void 0,n)).then(function(e){return[r,e]})})}catch(e){return Promise.reject(e)}}});
//# sourceMappingURL=babelReadsPresets.min.umd.js.map
"
`;

exports[`builderz working for single package babel-reads-presets 7`] = `
"(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = factory() :
	typeof define === 'function' && define.amd ? define(factory) :
	(global = global || self, global.babelReadsPresets = factory());
}(this, (function () {
	var two = function two() {
	  try {
	    for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
	      args[_key] = arguments[_key];
	    }

	    return Promise.resolve(args.reduce(function (total, value) {
	      return total + value;
	    }, 0));
	  } catch (e) {
	    return Promise.reject(e);
	  }
	};

	var index = (function () {
	  for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
	    args[_key] = arguments[_key];
	  }

	  try {
	    return Promise.resolve(two.apply(void 0, args)).then(function (_two) {
	      return Promise.resolve(two.apply(void 0, args)).then(function (_two2) {
	        return [_two, _two2];
	      });
	    });
	  } catch (e) {
	    return Promise.reject(e);
	  }
	});

	return index;

})));
//# sourceMappingURL=babelReadsPresets.umd.js.map
"
`;

exports[`builderz working for single package babel-reads-ts 1`] = `1`;

exports[`builderz working for single package babel-reads-ts 2`] = `
"var x = 0;

module.exports = x;
"
`;
